--- a/Final/P3/Solution.ipynb
+++ b/Final/P3/Solution.ipynb
@@ -186,10 +186,10 @@
    "outputs": [
     {
      "ename": "LoadError",
-     "evalue": "LoadError: ArgumentError: Package TOML not found in current path:\n- Run `import Pkg; Pkg.add(\"TOML\")` to install the TOML package.\n\nin expression starting at /Users/Brian/Desktop/Cornell/Classes/Spring/AdvBio/ProblemSets/CHEME-5440-7770-S20/Final/Problem _3/Include.jl:1",
+     "evalue": "LoadError: ArgumentError: Package TOML not found in current path:\n- Run `import Pkg; Pkg.add(\"TOML\")` to install the TOML package.\n\nin expression starting at /Users/Brian/Desktop/Cornell/Classes/Spring/AdvBio/ProblemSets/CHEME-5440-7770-S20/Final/P3/Include.jl:1",
      "output_type": "error",
      "traceback": [
-      "LoadError: ArgumentError: Package TOML not found in current path:\n- Run `import Pkg; Pkg.add(\"TOML\")` to install the TOML package.\n\nin expression starting at /Users/Brian/Desktop/Cornell/Classes/Spring/AdvBio/ProblemSets/CHEME-5440-7770-S20/Final/Problem _3/Include.jl:1",
+      "LoadError: ArgumentError: Package TOML not found in current path:\n- Run `import Pkg; Pkg.add(\"TOML\")` to install the TOML package.\n\nin expression starting at /Users/Brian/Desktop/Cornell/Classes/Spring/AdvBio/ProblemSets/CHEME-5440-7770-S20/Final/P3/Include.jl:1",
       "",
       "Stacktrace:",
       " [1] require(::Module, ::Symbol) at ./loading.jl:887",
@@ -197,7 +197,7 @@
       " [3] include_relative(::Module, ::String) at ./loading.jl:1105",
       " [4] include(::Module, ::String) at ./Base.jl:31",
       " [5] include(::String) at ./client.jl:424",
-      " [6] top-level scope at /Users/Brian/Desktop/Cornell/Classes/Spring/AdvBio/ProblemSets/CHEME-5440-7770-S20/Final/Problem _3/Solution.jl:1",
+      " [6] top-level scope at /Users/Brian/Desktop/Cornell/Classes/Spring/AdvBio/ProblemSets/CHEME-5440-7770-S20/Final/P3/Solution.jl:1",
       " [7] include at ./boot.jl:328 [inlined]",
       " [8] include_relative(::Module, ::String) at ./loading.jl:1105",
       " [9] include(::Module, ::String) at ./Base.jl:31",
